# v0dka-Game-Launcher

./: README.md
PythonWebServer/: config.py  main.py  news.json  store.json  test.py  version.json
PythonWebServer/templates/: base.html  dashboard.html  dashboard_announcement.html  dedicated_server_list.html  logged_in.html  login.html  news_feed.html  server_list.html  set_version.html  upload_build.html
VodkaGameLauncher/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
VodkaGameLauncher/src/: App.vue  main.ts  primeflex.css  splashscreen.html  styles.css  theme.css
VodkaGameLauncher/src-tauri/: Cargo.toml  Log.txt  tauri.conf - Copy.json  tauri.conf.json
VodkaGameLauncher/src-tauri/src/: main.rs
VodkaGameLauncher/src/components/: Greet.vue  Logged_in.vue  Login.vue  News.vue  TitleBar.vue  TitleBar2.vue
VodkaGameLauncher/src/router/: index.ts
