[package]
name = "VodkaGameLauncher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7.0"
reqwest = { version = "0.11.4", features = ["stream"] }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3"
dirs = "3.0"

[dependencies]
tauri = { version = "1.2", features = ["dialog", "fs-all", "http-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7.0"
reqwest = { version = "0.11.4", features = ["stream"] }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3"
dirs = "3.0"
window-shadows = "0.2.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
